[workspace]
members = [
    "rust/candid",
    "rust/candid_parser",
    "rust/candid_derive",
    "rust/ic_principal",
    "tools/didc",
]
resolver = "2"

[workspace.dependencies]
hex = "0.4.2"
num-bigint = { version = "0.4.2", features = ["serde"] }
num-traits = "0.2.12"
pretty = "0.12.0"
serde = { version = "1.0.118", features = ["derive"] }
thiserror = "1.0.20"
anyhow = "1.0"
