[workspace]
members = [
    "rust/candid",
    "rust/candid_parser",
    "rust/candid_derive",
    "rust/ic_principal",
    "tools/didc",
    "tools/didc-js/wasm-package",
]
resolver = "2"

[workspace.package]
rust-version = "1.78.0"

[workspace.dependencies]
hex = "0.4.3"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
pretty = "0.12"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"
arbitrary = "1.3"
console = "0.15"

[workspace.lints.clippy]
all = { level = "deny", priority = 0 }
uninlined_format_args = { level = "allow", priority = 1 }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(wasm_bindgen_unstable_test_coverage)',
] }
