[package]
name = "candid"
version = "0.1.0"
authors = ["DFINITY Team"]
description = "Candid is an interface description language (IDL) for interacting with canisters running on the Internet Computer."
homepage = "https://docs.rs/candid"
documentation = "https://docs.rs/candid"
repository = "https://github.com/dfinity/candid"
license = "Apache-2.0"
readme = "README.md"

categories = ["encoding", "parsing", "wasm"]
keywords = ["internet-computer", "idl", "candid", "dfinity", "parser"]
include = ["src", "Cargo.toml", "build.rs", "LICENSE", "README.md"]

[build-dependencies]
lalrpop = "0.18.1"

[dependencies]
leb128 = "0.2.4"
serde = "1.0.106"
paste = "0.1"
num_enum = "0.4.3"
candid_derive = { path = "../candid_derive", version = "0.1.1" }
lalrpop-util = "0.18.1"
pretty = "0.6"

[dev-dependencies]
hex = "^0.3"
