[package]
name = "candid"
version = "0.2.4"
edition = "2018"
authors = ["DFINITY Team"]
description = "Candid is an interface description language (IDL) for interacting with canisters running on the Internet Computer."
homepage = "https://docs.rs/candid"
documentation = "https://docs.rs/candid"
repository = "https://github.com/dfinity/candid"
license = "Apache-2.0"
readme = "README.md"

categories = ["encoding", "parsing", "wasm"]
keywords = ["internet-computer", "idl", "candid", "dfinity", "parser"]
include = ["src", "Cargo.toml", "build.rs", "LICENSE", "README.md"]
build = "build.rs"

[build-dependencies]
lalrpop = "0.19.0"

[dependencies]
leb128 = "0.2.4"
serde = "1.0"
byteorder = "1.3"
paste = "0.1"
num_enum = "0.4.3"
num-bigint = "0.2"
num-traits = "0.2.7"
candid_derive = { path = "../candid_derive", version = "0.2.1" }
lalrpop-util = "0.19.0"
pretty = "0.6"
hex = "^0.3"

[dev-dependencies]
pretty_assertions = "0.6.1"
rustfmt = "0.10.0"
test-generator = "0.3.0"
rand = "0.7"
