[package]
name = "candid_derive"
version = "0.1.0"
authors = ["chenyan-dfinity <yan.chen@dfinity.org>"]

[lib]
name = "candid_derive"
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["visit"] }
proc-macro2 = "1.0.2"

[dev-dependencies]
serde = { version = "1.0" }

