[package]
name = "candid_relate"
version = "0.1.0"
edition = "2018"
authors = ["DFINITY Team"]
description = "Operations that relate generic Candid values and types."
homepage = "https://docs.rs/candid_relate"
documentation = "https://docs.rs/candid_relate"
repository = "https://github.com/dfinity/candid"
license = "Apache-2.0"
readme = "README.md"

categories = ["encoding", "wasm"]
keywords = ["internet-computer", "candid", "dfinity", "delta", "diff"]
include = ["src", "README.md", "Cargo.toml", "LICENSE"]

[lib]
name = "candid_relate"

[dependencies]
candid = "0.3.0"
