[package]
name = "candid"
version = "0.10.0"
edition = "2021"
authors = ["DFINITY Team"]
description = "Candid is an interface description language (IDL) for interacting with canisters running on the Internet Computer."
homepage = "https://internetcomputer.org/docs/current/developer-docs/build/candid/candid-concepts"
documentation = "https://docs.rs/candid"
repository = "https://github.com/dfinity/candid"
license = "Apache-2.0"
readme = "README.md"
categories = ["encoding", "wasm"]
keywords = ["internet-computer", "idl", "candid", "dfinity"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
byteorder = "1.4.3"
candid_derive = { path = "../candid_derive", version = "=0.6.3" }
codespan-reporting = "0.11"
hex = "0.4.2"
ic_principal = { path = "../ic_principal", version = "0.1.0" }
leb128 = "0.2.4"
num_enum = "0.6.1"
num-bigint = { version = "0.4.2", features = ["serde"] }
num-traits = "0.2.12"
paste = "1.0.0"
pretty = "0.12.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "1.0.20"
anyhow = "1.0"
binread = { version = "2.1", features = ["debug_template"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
stacker = "0.1"

[dev-dependencies]
rand = "0.8"
criterion = "0.4"
serde_cbor = "0.11.2"
serde_json = "1.0.74"
bincode = "1.3.3"

[[bench]]
name = "benchmark"
harness = false
path = "benches/benchmark.rs"

[features]
mute_warnings = []
