[package]
name = "candid"
version = "0.10.0"
edition = "2021"
authors = ["DFINITY Team"]
description = "Candid is an interface description language (IDL) for interacting with canisters running on the Internet Computer."
homepage = "https://internetcomputer.org/docs/current/developer-docs/build/candid/candid-concepts"
documentation = "https://docs.rs/candid"
repository = "https://github.com/dfinity/candid"
license = "Apache-2.0"
readme = "README.md"
categories = ["encoding", "wasm"]
keywords = ["internet-computer", "idl", "candid", "dfinity"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
candid_derive = { path = "../candid_derive", version = "=0.6.4" }
ic_principal = { path = "../ic_principal", version = "0.1.0" }
binread = { version = "2.1", features = ["debug_template"] }
byteorder = "1.4.3"
leb128 = "0.2.4"
paste = "1.0.0"
num-bigint = { workspace = true }
num-traits= { workspace = true }
hex.workspace = true
pretty.workspace = true
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true

serde_bytes = { version = "0.11", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
stacker = "0.1"

[dev-dependencies]
rand.workspace = true
criterion = "0.4"
serde_cbor = "0.11.2"
serde_json = "1.0.74"
bincode = "1.3.3"

[[bench]]
name = "benchmark"
harness = false
path = "benches/benchmark.rs"

[features]
mute_warnings = []
#bignum = ["num-bigint", "num-traits"]
value = []
default = ["serde_bytes"]
all = ["default", "value"]

[[test]]
name = "types"
path = "tests/types.rs"
required-features = ["value"]

# docs.rs-specific configuration
# To test locally: RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --features all
[package.metadata.docs.rs]
features = ["all"]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
