[package]
name = "ic_principal"
version = "0.1.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2021"
documentation = "https://docs.rs/ic_principal"
repository="https://github.com/dfinity/candid"
license = "Apache-2.0"
readme = "README.md"
categories = ["data-structures", "no-std"]
keywords = ["internet-computer", "types", "dfinity"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
crc32fast = "1.3.0"
data-encoding = "2.3.2"
hex = "0.4.3"
sha2 = "0.10.1"
thiserror = "1.0.30"

[dev-dependencies]
serde_cbor = "0.11.2"
serde_json = "1.0.74"
serde_test = "1.0.137"
impls = "1"

[dependencies.serde]
version = "1.0.115"
features = ["derive"]
optional = true

[dependencies.serde_bytes]
version = "0.11.5"
optional = true

[features]
# Default features include serde support.
default = ['serde', 'serde_bytes']
