[package]
name = "candiff"
version = "0.1.0"
edition = "2018"
authors = ["DFINITY Team"]
description = "Relate candid values that change over time."
homepage = "https://docs.rs/candiff"
documentation = "https://docs.rs/candiff"
repository = "https://github.com/dfinity/candid"
license = "Apache-2.0"
readme = "README.md"

categories = ["encoding", "wasm"]
keywords = ["internet-computer", "candid", "dfinity", "delta", "diff"]
include = ["src", "README.md", "Cargo.toml", "LICENSE"]

[lib]
name = "candiff"

[dependencies]
candid = { path = "../../rust/candid" }
clap = "2.33"
structopt = "0.3"
log = "0.4"
env_logger = "0.8"
pretty = "0.10.0"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"

[[bin]]
name = "candiff"
path = "src/candiff.rs"

