[package]
name = "didc-js"
version = "0.1.0"
authors = ["DFINITY Team"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { path = "../../rust/candid", features = ["random"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"

[workspace]

[profile.release]
lto = true
opt-level = 'z'