[package]
name = "didc"
version = "0.3.6"
authors = ["DFINITY Team"]
edition = "2021"

[dependencies]
candid_parser = { path = "../../rust/candid_parser", features = ["all"] }
clap = { version = "4.3", features = ["derive"] }
pretty-hex = "0.2.1"
hex.workspace = true
anyhow.workspace = true
rand.workspace = true

