[package]
name = "didc"
version = "0.4.0"
authors = ["DFINITY Team"]
edition = "2021"

[dependencies]
candid_parser = { path = "../../rust/candid_parser", features = ["all"] }
clap = { version = "4.5", features = ["derive"] }
pretty-hex = "0.4.1"
hex.workspace = true
anyhow.workspace = true
rand.workspace = true
console.workspace = true

