[package]
name = "didc"
version = "0.6.1"
authors = ["DFINITY Team"]
edition = "2021"
description = "Candid command line tool"
license = "Apache-2.0"
repository = "https://github.com/dfinity/candid"

[dependencies]
candid_parser = { path = "../../rust/candid_parser", features = ["all"] }
clap = { version = "4.5", features = ["derive"] }
pretty-hex = "0.4.1"
hex.workspace = true
anyhow.workspace = true
rand.workspace = true
console.workspace = true

[lints]
workspace = true
