[package]
name = "didc-wasm"
version = "0.1.0"
authors = ["DFINITY Team"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["wee_alloc"]

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "0.2.65"
candid = { path = "../../rust/candid" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[package.metadata.wasm-pack.profile.release]
# https://github.com/rustwasm/wasm-pack/issues/886
# Or use wasm-bindgen = "=0.2.60"
wasm-opt = ["-Oz", "--enable-mutable-globals"]
