[package]
name = "didjs"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
candid = "0.10"
candid_parser = "0.1"
ic-asset-certification = { git = "https://github.com/dfinity/response-verification", rev = "da70db93832f88ecc556ae082612aedec47d3816" }
ic-cdk = "0.13"
ic-certification = { git = "https://github.com/dfinity/response-verification", rev = "da70db93832f88ecc556ae082612aedec47d3816" }
ic-http-certification = { git = "https://github.com/dfinity/response-verification", rev = "da70db93832f88ecc556ae082612aedec47d3816" }
include_dir = { version = "0.7", features = ["glob"] }
serde = "1.0"
serde_bytes = "0.11"
serde_cbor = "0.11.2"
