[package]
name = "didjs"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
candid_parser = "0.1"
ic-cdk = "0.16"
ic-http-certification = { git = "https://github.com/dfinity/response-verification", rev = "35dd2bd316682cbd3d33720af7e1dd14ffc47b50" }
serde = "1.0"
serde_bytes = "0.11"
